--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
           <li><a class="smooth-scroll" href="#hero">Home</a></li>
-          <li><a class="smooth-scroll" href="#work">Work</a></li>
           <li><a class="smooth-scroll" href="#services">Services</a></li>
           <li><a class="smooth-scroll" href="#about">About</a></li>
           <li><a class="smooth-scroll" href="#follow">Follow</a></li>
+          <li><a class="smooth-scroll" href="#portfolio">Portfolio</a></li>
           <li><a class="smooth-scroll" href="#contact">Contact</a></li>
         </ul>
       </div>
@@ -54,8 +54,79 @@
   </section>
   <!-- End Hero Section -->
 
+
+  <!-- Services Section -->
+  <section id="services" class="row">
+        <div class="col-md-3 col-sm-6">
+            <div class="serviceBox">
+                <div class="service-icon">
+                    <span><i class="fa fa-globe"></i></span>
+                </div>
+                <div class="service-content">
+                    <h3 class="title">Web Design</h3>
+                    <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean in volutpat elit. Class aptent taciti.</p>
+                    <a href="#" class="read-more fa fa-plus"></a>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-3 col-sm-6">
+            <div class="serviceBox green">
+                <div class="service-icon">
+                    <span><i class="fa fa-rocket"></i></span>
+                </div>
+                <div class="service-content">
+                    <h3 class="title">Web Development</h3>
+                    <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean in volutpat elit. Class aptent taciti.</p>
+                    <a href="#" class="read-more fa fa-plus"></a>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-3 col-sm-6">
+            <div class="serviceBox green">
+                <div class="service-icon">
+                    <span><i class="fa fa-briefcase"></i></span>
+                </div>
+                <div class="service-content">
+                    <h3 class="title">Brand Building</h3>
+                    <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean in volutpat elit. Class aptent taciti.</p>
+                    <a href="#" class="read-more fa fa-plus"></a>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-3 col-sm-6">
+            <div class="serviceBox green">
+                <div class="service-icon">
+                    <span><i class="fa fa-mobile"></i></span>
+                </div>
+                <div class="service-content">
+                    <h3 class="title">Responsive Design</h3>
+                    <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean in volutpat elit. Class aptent taciti.</p>
+                    <a href="#" class="read-more fa fa-plus"></a>
+                </div>
+            </div>
+        </div>
+  </section>
+  <!-- End Services Section -->
+
+  <!-- About Section -->
+  <section id="about" class="row">
+
+  </section>
+  <!-- End About Section -->
+
+
+  <!-- Follow Section -->
+  <div id="Follow" class="row">
+
+  </div>
+  <!-- End Follow Section -->
+
+
   <!-- Work Section -->
-  <section id="work" class="row">
+  <section id="portfolio" class="row">
       <div class="col-md-4 col-sm-6">
         <a href="http://www.ccmrs.org" target="_blank">
           <img class="img-responsive" src="images/ccmrs.jpg" alt="ccmrs">
@@ -114,93 +185,6 @@
   </section>
   <!-- End Work Section -->
 
-  <!-- Services Section -->
-  <section id="services" class="row">
-        <div class="col-md-3 col-sm-6">
-            <div class="serviceBox">
-                <div class="service-icon">
-                    <span><i class="fa fa-globe"></i></span>
-                </div>
-                <div class="service-content">
-                    <h3 class="title">Web Design</h3>
-                    <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean in volutpat elit. Class aptent taciti.</p>
-                    <a href="#" class="read-more fa fa-plus"></a>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-md-3 col-sm-6">
-            <div class="serviceBox green">
-                <div class="service-icon">
-                    <span><i class="fa fa-rocket"></i></span>
-                </div>
-                <div class="service-content">
-                    <h3 class="title">Web Development</h3>
-                    <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean in volutpat elit. Class aptent taciti.</p>
-                    <a href="#" class="read-more fa fa-plus"></a>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-md-3 col-sm-6">
-            <div class="serviceBox green">
-                <div class="service-icon">
-                    <span><i class="fa fa-briefcase"></i></span>
-                </div>
-                <div class="service-content">
-                    <h3 class="title">Brand Building</h3>
-                    <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean in volutpat elit. Class aptent taciti.</p>
-                    <a href="#" class="read-more fa fa-plus"></a>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-md-3 col-sm-6">
-            <div class="serviceBox green">
-                <div class="service-icon">
-                    <span><i class="fa fa-mobile"></i></span>
-                </div>
-                <div class="service-content">
-                    <h3 class="title">Responsive Design</h3>
-                    <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean in volutpat elit. Class aptent taciti.</p>
-                    <a href="#" class="read-more fa fa-plus"></a>
-                </div>
-            </div>
-        </div>
-  </section>
-  <!-- End Services Section -->
-
-  <!-- About/Follow Section -->
-  <section id="about" class="row halfbox-section">
-		<div class="col-md-6 halfbox-left">
-		    <div class="site-title">
-		        <h3>Hi, I'm Brian!</h3>
-		    </div>
-
-			<p>Integer eu dui quis purus mattis maximus. Nunc bibendum dignissim libero, at placerat lectus fringilla nec. Morbi ut risus sed nulla elementum ultrices venenatis sit amet nisl.</p>
-		</div>
-		<div class="col-md-6 video" id="video">
-		</div>
-
-	<div class="clearfix"></div>
-	</div>
-
-
-<div class="halfbox-section">
-		<div class="col-md-6 video2" id="video">
-		</div>
-	</div>
-	    <div class="col-md-6 halfbox-left">
-          <i class="fa fa-facebook-square" aria-hidden="true"></i>
-          <i class="fa fa-github" aria-hidden="true"></i>
-          <i class="fa fa-instagram" aria-hidden="true"></i>
-          <i class="fa fa-twitter-square" aria-hidden="true"></i>
-		</div>
-
-	<div class="clearfix"></div>
-	</div>
-  </section>
-  <!-- End About/Follow Section -->
 
   <!-- Contact Section -->
   <section id="contact" class="row">
