--- a/index.html
+++ b/index.html
@@ -113,13 +113,21 @@
 
   <!-- About Section -->
   <section id="about" class="row">
-    <div class="col-md-3">
+    <div class="col-md-6 col-sm-6 halfbox-left">
+      <div class="site-title">
         <h3>Hi, I'm Brian!</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </div>
+
+        <p>Integer eu dui quis purus mattis maximus. Nunc bibendum dignissim libero, at placerat lectus fringilla nec. Morbi ut risus sed nulla elementum ultrices venenatis sit amet nisl.</p>
     </div>
-    <div class="col-md-6">
-      <img src="images/about_me.jpg" alt="Brian" class="img-responsive">
-    </div>
+    <div class="col-md-6 col-sm-6 img-right"></div>
+
+    <div class="clearfix"></div>
+
+    <div class="col-md-6 col-sm-6 img-left"></div>
+    <div class="col-md-6 col-sm-6 halfbox-right"></div>
+
+    <div class="clearfix"></div>
   </section>
   <!-- End About Section -->
 
