Added more to About section

--- a/index.html
+++ b/index.html
@@ -113,19 +113,37 @@
 
   <!-- About Section -->
   <section id="about" class="row">
-    <div class="col-md-6 col-sm-6 halfbox-left">
+    <div class="col-md-6 col-sm-12 halfbox-left">
       <div class="site-title">
         <h3>Hi, I'm Brian!</h3>
       </div>
-
         <p>Integer eu dui quis purus mattis maximus. Nunc bibendum dignissim libero, at placerat lectus fringilla nec. Morbi ut risus sed nulla elementum ultrices venenatis sit amet nisl.</p>
+    <div class="row social-row">
+      <div class="col-md-12 social-container">
+        <a href="https://www.facebook.com/ikaikafoster" target="_blank">
+          <i class="fa fa-facebook-official" aria-hidden="true"></i>
+        </a>
+        <a href="https://github.com/brianifoster" target="_blank">
+          <i class="fa fa-github" aria-hidden="true"></i>
+        </a>
+        <a href="https://www.instagram.com/brianifoster/" target="_blank">
+          <i class="fa fa-instagram" aria-hidden="true"></i>
+        </a>
+        <a href="https://twitter.com/BrianIFoster" target="_blank">
+          <i class="fa fa-twitter-square" aria-hidden="true"></i>
+        </a>
+        <a href="https://www.linkedin.com/in/saintzero/" target="_blank">
+          <i class="fa fa-linkedin-square" aria-hidden="true"></i>
+        </a>
+      </div>
     </div>
-    <div class="col-md-6 col-sm-6 img-right"></div>
+    </div>
+    <div class="col-md-6 col-sm-12 img-right"></div>
 
     <div class="clearfix"></div>
 
-    <div class="col-md-6 col-sm-6 img-left"></div>
-    <div class="col-md-6 col-sm-6 halfbox-right"></div>
+    <div class="col-md-6 col-sm-12 img-left"></div>
+    <div class="col-md-6 col-sm-12 halfbox-right"></div>
 
     <div class="clearfix"></div>
   </section>
