--- a/index.html
+++ b/index.html
@@ -49,15 +49,16 @@
       <h3>FULLY RESPONSIVE, CUSTOM-DESIGNED WEBSITES</h3>
       </div>
     <div class="intro">
-      <p class="intro-text">Hanai Web Design is dedicated to creating <span class="emphasis">smart</span>, <span class="emphasis">beautiful</span>, and <span class="emphasis">creative</span> websites<br>for small businesses. Below are a few of the companies we have worked with:</p>
+      <p class="intro-text">Dedicated to creating <span class="emphasis">smart</span>, <span class="emphasis">beautiful</span>, and <span class="emphasis">creative</span> websites<br>for small businesses. Below are a few of the companies we have worked with:</p>
     </div>
   </section>
   <!-- End Hero Section -->
 
 
   <!-- Services Section -->
-  <section id="services" class="row">
-        <div class="col-md-3 col-sm-6">
+  <section id="services" class="row row-eq-height">
+      <div class="col-md-offset-2 col-md-8">
+        <div class="col-md-4 col-sm-12">
             <div class="serviceBox">
                 <div class="service-icon">
                     <span><i class="fa fa-globe"></i></span>
@@ -70,7 +71,7 @@
             </div>
         </div>
 
-        <div class="col-md-3 col-sm-6">
+        <div class="col-md-4 col-sm-12">
             <div class="serviceBox green">
                 <div class="service-icon">
                     <span><i class="fa fa-rocket"></i></span>
@@ -83,7 +84,7 @@
             </div>
         </div>
 
-        <div class="col-md-3 col-sm-6">
+        <div class="col-md-4 col-sm-12">
             <div class="serviceBox green">
                 <div class="service-icon">
                     <span><i class="fa fa-briefcase"></i></span>
@@ -95,19 +96,7 @@
                 </div>
             </div>
         </div>
-
-        <div class="col-md-3 col-sm-6">
-            <div class="serviceBox green">
-                <div class="service-icon">
-                    <span><i class="fa fa-mobile"></i></span>
-                </div>
-                <div class="service-content">
-                    <h3 class="title">Responsive Design</h3>
-                    <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean in volutpat elit. Class aptent taciti.</p>
-                    <a href="#" class="read-more fa fa-plus"></a>
-                </div>
-            </div>
-        </div>
+      </div>
   </section>
   <!-- End Services Section -->
 
