--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/styles.css">
-    <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat" rel="stylesheet">   <title>Hanai </title>
+<link href="https://fonts.googleapis.com/css?family=Montserrat|Roboto+Condensed" rel="stylesheet">
 </head>
 <body>
 
@@ -45,7 +45,7 @@
   <!-- Hero Section -->
   <section id="hero" class="row">
       <div class="col-md-12">
-      <h3>FULLY RESPONSIVE, CUSTOM-DESIGNED WEBSITES</h3>
+      <h3>FULLY RESPONSIVE<br>CUSTOM-DESIGNED WEBSITES</h3>
       </div>
     <div class="intro">
       <p class="intro-text">Dedicated to creating <span class="emphasis">smart</span>, <span class="emphasis">beautiful</span>, and <span class="emphasis">creative</span> websites<br>for small businesses. Below are a few of the companies we have worked with:</p>
@@ -63,7 +63,7 @@
                     <span><i class="fa fa-globe"></i></span>
                 </div>
                 <div class="service-content">
-                    <h3 class="title">Web Design</h3>
+                    <h3 class="title">Design</h3>
                     <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean in volutpat elit. Class aptent taciti.</p>
                 </div>
             </div>
@@ -75,7 +75,7 @@
                     <span><i class="fa fa-rocket"></i></span>
                 </div>
                 <div class="service-content">
-                    <h3 class="title">Web Development</h3>
+                    <h3 class="title">Development</h3>
                     <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean in volutpat elit. Class aptent taciti.</p>
                 </div>
             </div>
@@ -130,15 +130,9 @@
   <!-- End About Section -->
 
 
-  <!-- Follow Section -->
-  <div id="Follow" class="row">
-
-  </div>
-  <!-- End Follow Section -->
-
-
   <!-- Work Section -->
   <section id="portfolio" class="row">
+    <div class="col-md-offset-2 col-md-8 top">
       <div class="col-md-4 col-sm-6">
         <a href="http://www.ccmrs.org" target="_blank">
           <img class="img-responsive" src="images/ccmrs.jpg" alt="ccmrs">
@@ -167,6 +161,9 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
       </div>
     </div>
+      <!-- Second Row -->
+  <div class="row">
+    <div class="col-md-offset-2 col-md-8">
       <div class="col-md-4 col-sm-6">
         <a href="http://www.riverpark.org" target="_blank">
           <img class="img-responsive" src="images/rbc.jpg" alt="riverpark church">
@@ -174,7 +171,7 @@
         <h3>
           <a href="http://www.riverpark.org" target="_blank">Riverpark Bible Church</a>
         </h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+        <p class="bottom">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
       </div>
       <div class="col-md-4 col-sm-6">
         <a href="http://www.freegracefresno.com" target="_blank">
@@ -183,7 +180,7 @@
         <h3>
           <a href="http://www.freegracefresno.com" target="_blank">Free Grace Church</a>
         </h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+        <p class="bottom">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
       </div>
       <div class="col-md-4 col-sm-6">
         <a href="http://www.mauinow.com" target="_blank">
@@ -192,8 +189,10 @@
         <h3>
           <a href="http://www.mauinow.com" target="_blank">MauiNow.com</a>
         </h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+        <p class="bottom">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
       </div>
+    </div>
+  </div>
   </section>
   <!-- End Work Section -->
 
