Changes before working on Contact section

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/styles.css">
 <link href="https://fonts.googleapis.com/css?family=Montserrat|Roboto+Condensed" rel="stylesheet">
+<title>Welcome to Hanai</title>
 </head>
 <body>
 
@@ -45,7 +46,7 @@
   <!-- Hero Section -->
   <section id="hero" class="row">
       <div class="col-md-12">
-      <h3>FULLY RESPONSIVE<br>CUSTOM-DESIGNED WEBSITES</h3>
+      <h2>FULLY RESPONSIVE<br>CUSTOM-DESIGNED WEBSITES</h2>
       </div>
     <div class="intro">
       <p class="intro-text">Dedicated to creating <span class="emphasis">smart</span>, <span class="emphasis">beautiful</span>, and <span class="emphasis">creative</span> websites<br>for small businesses. Below are a few of the companies we have worked with:</p>
@@ -57,7 +58,7 @@
   <!-- Services Section -->
   <section id="services" class="row row-eq-height">
       <div class="col-md-offset-2 col-md-8">
-        <div class="col-md-4 col-sm-12">
+        <div class="col-md-4">
             <div class="serviceBox">
                 <div class="service-icon">
                     <span><i class="fa fa-globe"></i></span>
@@ -133,16 +134,16 @@
   <!-- Work Section -->
   <section id="portfolio" class="row">
     <div class="col-md-offset-2 col-md-8 top">
-      <div class="col-md-4 col-sm-6">
+      <div class="col-md-4 col-sm-12 col-xs-12">
         <a href="http://www.ccmrs.org" target="_blank">
           <img class="img-responsive" src="images/ccmrs.jpg" alt="ccmrs">
         </a>
         <h3>
-          <a href="http://www.ccmrs.org" target="_blank">CCMRS</a>
+          <a href="http://www.ccmrs.org" target="_blank">C.C.M.R.S.</a>
         </h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
       </div>
-      <div class="col-md-4 col-sm-6">
+      <div class="col-md-4 col-sm-12 col-xs-12">
         <a href="http://www.highviewbible.com" target="_blank">
           <img class="img-responsive" src="images/highview.jpg" alt="highview church">
         </a>
@@ -151,7 +152,7 @@
         </h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
       </div>
-      <div class="col-md-4 col-sm-6">
+      <div class="col-md-4 col-sm-12 col-xs-12">
         <a href="#">
           <img class="img-responsive" src="images/kahana_canoe.jpg" alt="kahana canoe">
         </a>
@@ -162,29 +163,28 @@
       </div>
     </div>
       <!-- Second Row -->
-  <div class="row">
     <div class="col-md-offset-2 col-md-8">
-      <div class="col-md-4 col-sm-6">
+      <div class="col-md-4 col-sm-12 col-xs-12">
         <a href="http://www.riverpark.org" target="_blank">
-          <img class="img-responsive" src="images/rbc.jpg" alt="riverpark church">
+          <img class="img-responsive img-top" src="images/rbc.jpg" alt="riverpark church">
         </a>
         <h3>
           <a href="http://www.riverpark.org" target="_blank">Riverpark Bible Church</a>
         </h3>
         <p class="bottom">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
       </div>
-      <div class="col-md-4 col-sm-6">
+      <div class="col-md-4 col-sm-12 col-xs-12">
         <a href="http://www.freegracefresno.com" target="_blank">
-          <img class="img-responsive" src="images/freegrace.jpg" alt="free grace church">
+          <img class="img-responsive img-top" src="images/freegrace.jpg" alt="free grace church">
         </a>
         <h3>
           <a href="http://www.freegracefresno.com" target="_blank">Free Grace Church</a>
         </h3>
         <p class="bottom">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
       </div>
-      <div class="col-md-4 col-sm-6">
+      <div class="col-md-4 col-sm-12 col-xs-12">
         <a href="http://www.mauinow.com" target="_blank">
-          <img class="img-responsive" src="images/mauinow.jpg" alt="mauinow">
+          <img class="img-responsive img-top" src="images/mauinow.jpg" alt="mauinow">
         </a>
         <h3>
           <a href="http://www.mauinow.com" target="_blank">MauiNow.com</a>
@@ -192,7 +192,6 @@
         <p class="bottom">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
       </div>
     </div>
-  </div>
   </section>
   <!-- End Work Section -->
 
@@ -211,5 +210,6 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"></script>
   <script src="js/jquery.js"></script>
   <script src="js/bootstrap.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
