--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <link ref="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
-    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/styles.css">
 <link href="https://fonts.googleapis.com/css?family=Montserrat|Roboto+Condensed" rel="stylesheet">
@@ -198,13 +198,98 @@
 
   <!-- Contact Section -->
   <section id="contact" class="row">
+      <div class="col-md-6">
+        <div class="well well-sm">
+          <form class="form-horizontal" action="" method="post">
+          <fieldset>
+            <legend class="text-center">Contact Me</legend>
 
+              <!-- Name input-->
+            <div class="form-group">
+              <label class="col-md-3 control-label" for="name">Name</label>
+              <div class="col-md-9">
+                <input id="name" name="name" type="text" placeholder="Your name" class="form-control">
+              </div>
+            </div>
+
+              <!-- Email input-->
+            <div class="form-group">
+              <label class="col-md-3 control-label" for="email">Your E-mail</label>
+              <div class="col-md-9">
+                <input id="email" name="email" type="text" placeholder="Your email" class="form-control">
+              </div>
+            </div>
+
+              <!-- Message body -->
+            <div class="form-group">
+              <label class="col-md-3 control-label" for="message">Your message</label>
+              <div class="col-md-9">
+                <textarea class="form-control" id="message" name="message" placeholder="Please enter your message here..." rows="5"></textarea>
+              </div>
+            </div>
+
+              <!-- Form actions -->
+            <div class="form-group">
+              <div class="col-md-12 text-right">
+                <button type="submit" class="btn btn-primary btn-lg">Submit</button>
+              </div>
+            </div>
+          </fieldset>
+          </form>
+        </div>
+      </div>
+
+      <div class="col-md-6 col-sm-12 col-xs-12 map-responsive">
+        <div class="map">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5399.79340428556!2d-119.78581991671733!3d36.731931702637965!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x809460a5cfdf4b6b%3A0xab092ce50c284a0a!2sBitwise+Industries!5e1!3m2!1sen!2sus!4v1512802287751" width="500" height="375" frameborder="0" style="border:0" allowfullscreen></iframe>
+        </div>
+      </div>
   </section>
   <!-- End Contact Section -->
 
 
 </main>
-<footer></footer>
+<footer class="page-footer">
+  <div class="container-fluid footer-container">
+    <div class="row">
+      <div class="col-md-8">
+        <h3>Hanai</h3>
+          <p><i class="fa fa-home" aria-hidden="true"></i><span class="info">
+        4043 North Tollhouse Rd | Fresno, CA 93726</span></p>
+          <p><i class="fa fa-mobile" aria-hidden="true"></i><span class="info">(559)908-8841</span></p>
+
+        <a href="mailto:brian.i.foster@gmail.com">
+          <i class="fa fa-envelope-o" aria-hidden="true"></i>
+        </a>
+      </div>
+      <div class="col-md-4 footer-nav">
+        <ul class="footer-links">
+          <li class="footer-item">
+            <a href="#hero">Home</a>
+          </li>
+          <li class="footer-item">
+            <a href="#services">Services</a>
+          </li>
+          <li class="footer-item">
+            <a href="#about">About</a>
+          </li>
+          <li class="footer-item">
+            <a href="#portfolio">Portfolio</a>
+          </li>
+          <li class="footer-item">
+            <a href="#contact">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  <div class="container copyright">
+    <div class="row">
+      <div class="col-md-12"
+      <p>Hanai &copy 2018</p>
+    </div>
+    </div>
+  </div>
+</footer>
 
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"></script>
