Corrected some errors

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <link ref="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/styles.css">
 <link href="https://fonts.googleapis.com/css?family=Montserrat|Roboto+Condensed" rel="stylesheet">
@@ -257,10 +257,7 @@
           <p><i class="fa fa-home" aria-hidden="true"></i><span class="info">
         4043 North Tollhouse Rd | Fresno, CA 93726</span></p>
           <p><i class="fa fa-mobile" aria-hidden="true"></i><span class="info">(559)908-8841</span></p>
-
-        <a href="mailto:brian.i.foster@gmail.com">
-          <i class="fa fa-envelope-o" aria-hidden="true"></i>
-        </a>
+          <p><i class="fa fa-envelope-o" aria-hidden="true"></i><span class="info"><a href="mailto:brian.i.foster@gmail.com">Email me!</a></span></p>
       </div>
       <div class="col-md-4 footer-nav">
         <ul class="footer-links">
